# FreeRTOS-Kernel-TFG

./: targets
portable/GCC/ARM7_MC13224V/: .gitignore  CMakeLists.txt  FreeRTOSConfig.h  port.c  portISR.c  portISR.c.bak  portmacro.h
portable/GCC/ARM7_MC13224V/bsp/: CMakeLists.txt  econotag.ld
portable/GCC/ARM7_MC13224V/bsp/drivers/: itc.c  timers.c
portable/GCC/ARM7_MC13224V/bsp/hal/: bsp_init.c  crt0.s  excep.c  excep_asm.s
portable/GCC/ARM7_MC13224V/bsp/include/: excep.h  system.h  timers.h
portable/GCC/MC13224V/: .gitignore  CMakeLists.txt  FreeRTOSConfig.h  port.c  portmacro.h
portable/GCC/MC13224V/bsp/: CMakeLists.txt  bsp.mk
portable/GCC/MC13224V/bsp/drivers/: gpio.c  itc.c  uart.c
portable/GCC/MC13224V/bsp/hal/: excep.c  syscalls.c
